setup project and git
